<resources>
    <string name="app_name">Toba Translate</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_exit">Exit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="font_roboto">roboto</string>
    <string name="font_stoke">stoke</string>
    <string name="font_icon">icomoons</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <!-- title label -->
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_ind">Bahasa Indonesia</string>
    <string name="title_btk">Bahasa Batak</string>

    <!-- button label -->
    <string name="button_terjemahkan">Terjemahkan</string>

    <!-- hint label -->
    <string name="hint_input_language">Ketuk untuk memasukan teks</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SELANJUTNYA</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">Selamat datang di Toba Translate</string>
    <string name="slide_1_desc">Sekarang kamu sudah bisa menerjemahkan bahasa Indonesia ke bahasa Batak Toba dengan mudah.</string>

    <string name="slide_2_title">Terjemahkan dalam bentuk kalimat</string>
    <string name="slide_2_desc">Tidak hanya dalam bentuk kata-kata, kamu juga dapat menerjemahkan dalam bentuk kalimat.</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
