<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ind"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="2"
                android:gravity="left"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next_small"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_btk"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="2"
                android:gravity="right"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextInputBahsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_language"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@android:color/transparent"
            android:focusable="true"
            android:layout_weight="2"/>

        <ImageView
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:background="@color/colorLine" />

    <Button
        android:id="@+id/buttonTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textSize="10sp"
        android:background="@drawable/button_shape"
        android:text="@string/button_terjemahkan"
        android:textColor="@color/textColorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewHasilTerjemahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textViewHasilTerjemahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/textColorPrimary"
            android:text="Sample Text hasil terjemahan"/>

    </android.support.v7.widget.CardView>

</LinearLayout>